[tool.poetry]
name = "mlray"
version = "0.1.0"
description = "Sample project demonstrating how to use Ray to build ML projects"
authors = ["Willem Meints <1550763+wmeints@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dask = {extras = ["dataframe"], version = "^2022.10.2"}
ray = "^2.1.0"
pyarrow = "^6.0.1"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
bandit = "^1.7.4"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
